// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table Component > applies custom className when provided 1`] = `
<div>
  <div
    class="w-full custom-table-class"
  >
    <table
      class="w-full text-black text-sm md:text-base table-fixed"
    >
      <colgroup>
        <col
          class="w-1/2"
        />
        <col
          class="w-1/2"
        />
      </colgroup>
      <thead>
        <tr
          class="border-b border-black"
        >
          <th
            class="text-base md:text-lg font-semibold pb-1 mb-1 px-0"
            scope="col"
            style="text-align: left;"
          >
            PLATFORM
          </th>
          <th
            class="text-base md:text-lg font-semibold pb-1 mb-1 px-0"
            scope="col"
            style="text-align: right;"
          >
            ACCOUNT
          </th>
        </tr>
      </thead>
      <tbody
        class="space-y-2 md:space-y-1"
      >
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              GITHUB
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <span
              class="text-base uppercase"
            >
              httml
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              LINKEDIN
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <span
              class="text-base uppercase"
            >
              https://www.linkedin.com/in/emirhan-kemal-kosem-259569b3/
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              MEDIUM
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <span
              class="text-base uppercase"
            >
              https://medium.com/emirhankemalkosem
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              TWITTER
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <span
              class="text-base uppercase"
            >
              https://x.com/KsemEmir
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              INSTAGRAM
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <span
              class="text-base uppercase"
            >
              https://www.instagram.com/emirhankemalkosem/
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              BLUESKY
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <span
              class="text-base uppercase"
            >
              https://bsky.app/profile/emirkosem.bsky.social
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table Component > renders links when cell is marked as link 1`] = `
<div>
  <div
    class="w-full "
  >
    <table
      class="w-full text-black text-sm md:text-base table-fixed"
    >
      <colgroup>
        <col
          class="w-1/2"
        />
        <col
          class="w-1/2"
        />
      </colgroup>
      <thead>
        <tr
          class="border-b border-black"
        >
          <th
            class="text-base md:text-lg font-semibold pb-1 mb-1 px-0"
            scope="col"
            style="text-align: left;"
          >
            PLATFORM
          </th>
          <th
            class="text-base md:text-lg font-semibold pb-1 mb-1 px-0"
            scope="col"
            style="text-align: right;"
          >
            ACCOUNT
          </th>
        </tr>
      </thead>
      <tbody
        class="space-y-2 md:space-y-1"
      >
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              GITHUB
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <a
              class="text-gray-700 hover:text-gray-900 underline flex items-center justify-end text-base after:absolute after:inset-0 focus-visible:focus-ring"
              href="https://github.com/KemalEmirhan"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="whitespace-nowrap max-w-[100px] truncate md:max-w-none"
              >
                https://github.com/KemalEmirhan
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-up-right w-3 h-3 md:w-4 md:h-4 flex-shrink-0 ml-1"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 7h10v10"
                />
                <path
                  d="M7 17 17 7"
                />
              </svg>
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table Component > renders regular text when cell is not a link 1`] = `
<div>
  <div
    class="w-full "
  >
    <table
      class="w-full text-black text-sm md:text-base table-fixed"
    >
      <colgroup>
        <col
          class="w-1/2"
        />
        <col
          class="w-1/2"
        />
      </colgroup>
      <thead>
        <tr
          class="border-b border-black"
        >
          <th
            class="text-base md:text-lg font-semibold pb-1 mb-1 px-0"
            scope="col"
            style="text-align: left;"
          >
            PLATFORM
          </th>
          <th
            class="text-base md:text-lg font-semibold pb-1 mb-1 px-0"
            scope="col"
            style="text-align: right;"
          >
            ACCOUNT
          </th>
        </tr>
      </thead>
      <tbody
        class="space-y-2 md:space-y-1"
      >
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              GITHUB
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <span
              class="text-base uppercase"
            >
              httml
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              LINKEDIN
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <span
              class="text-base uppercase"
            >
              https://www.linkedin.com/in/emirhan-kemal-kosem-259569b3/
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              MEDIUM
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <span
              class="text-base uppercase"
            >
              https://medium.com/emirhankemalkosem
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              TWITTER
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <span
              class="text-base uppercase"
            >
              https://x.com/KsemEmir
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              INSTAGRAM
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <span
              class="text-base uppercase"
            >
              https://www.instagram.com/emirhankemalkosem/
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              BLUESKY
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <span
              class="text-base uppercase"
            >
              https://bsky.app/profile/emirkosem.bsky.social
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table Component > renders with empty data array 1`] = `
<div>
  <div
    class="w-full "
  >
    <table
      class="w-full text-black text-sm md:text-base table-fixed"
    >
      <colgroup>
        <col
          class="w-1/2"
        />
        <col
          class="w-1/2"
        />
      </colgroup>
      <thead>
        <tr
          class="border-b border-black"
        >
          <th
            class="text-base md:text-lg font-semibold pb-1 mb-1 px-0"
            scope="col"
            style="text-align: left;"
          >
            PLATFORM
          </th>
          <th
            class="text-base md:text-lg font-semibold pb-1 mb-1 px-0"
            scope="col"
            style="text-align: right;"
          >
            ACCOUNT
          </th>
        </tr>
      </thead>
      <tbody
        class="space-y-2 md:space-y-1"
      />
    </table>
  </div>
</div>
`;

exports[`Table Component > should render with new generic data structure 1`] = `
<div>
  <div
    class="w-full "
  >
    <table
      class="w-full text-black text-sm md:text-base table-fixed"
    >
      <colgroup>
        <col
          class="w-1/2"
        />
        <col
          class="w-1/2"
        />
      </colgroup>
      <thead>
        <tr
          class="border-b border-black"
        >
          <th
            class="text-base md:text-lg font-semibold pb-1 mb-1 px-0"
            scope="col"
            style="text-align: left;"
          >
            PLATFORM
          </th>
          <th
            class="text-base md:text-lg font-semibold pb-1 mb-1 px-0"
            scope="col"
            style="text-align: right;"
          >
            ACCOUNT
          </th>
        </tr>
      </thead>
      <tbody
        class="space-y-2 md:space-y-1"
      >
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              GITHUB
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <span
              class="text-base uppercase"
            >
              httml
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              LINKEDIN
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <span
              class="text-base uppercase"
            >
              https://www.linkedin.com/in/emirhan-kemal-kosem-259569b3/
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              MEDIUM
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <span
              class="text-base uppercase"
            >
              https://medium.com/emirhankemalkosem
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              TWITTER
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <span
              class="text-base uppercase"
            >
              https://x.com/KsemEmir
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              INSTAGRAM
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <span
              class="text-base uppercase"
            >
              https://www.instagram.com/emirhankemalkosem/
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed translate-x-0 translate-y-0 [clip-path:inset(0)]"
        >
          <td
            class="align-baseline py-2"
            style="text-align: left;"
          >
            <span
              class="text-base uppercase"
            >
              BLUESKY
            </span>
          </td>
          <td
            class="align-baseline py-2"
            style="text-align: right;"
          >
            <span
              class="text-base uppercase"
            >
              https://bsky.app/profile/emirkosem.bsky.social
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
